--- a/ultimate_weather_site/templates/ultimate_weather_site/statistics.html
+++ b/ultimate_weather_site/templates/ultimate_weather_site/statistics.html
@@ -40,7 +40,7 @@
 
 
 <header class="header" id="top">
-
+    <h1>Statystyki dla różnic temperatur w prognozach i rzeczywistych temperatur</h1>
     {% if services_stats %}
                 <table class="table main_table" >
                 <th></th>
